--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
+    <div class="hero" alt="Group of people in a meeting room"></div>
     <main class="content">
         <section class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Notebook with SEO Goals in it" />
