--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
         </section>
     </main>
     <sidebar class="benefits">
-        <section class="benefit spacetext">
+        <section class="spacetext">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Gears turning into Money"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-        <section class="benefit spacetext">
+        <section class="spacetext">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Person's head becoming a lightbulb"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-        <section class="benefit spacetext">
+        <section class="spacetext">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="A gear surrounded by moneybags"/>
             <p>
