--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
     <div class="hero" alt="Group of people in a meeting room"></div>
     <main class="content">
         <section class="maincontent">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left maxheight" alt="Notebook with SEO Goals in it" />
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Notebook with SEO Goals in it" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
         <section class="maincontent">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right maxheight" alt="Graph of Reputation going up"/>
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Graph of Reputation going up"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
         <section class="maincontent">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left maxheight" alt="Table covered in social media icons"/>
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Table covered in social media icons"/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
