I FINALLY FOUND A SEMANTIC FOR THE BACKGROUND IMAGE!

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-    <div class="hero" alt="Group of people in a meeting room"></div>
+    <figure style="background-image: url(./assets/images/digital-marketing-meeting.jpg);" class="hero" alt="Group of people in a meeting room"></figure>
     <main class="content">
         <section class="maincontent" id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Notebook with SEO Goals in it" />
